2004-01-22  Bud Davis  <bdavis9659@comcast.net>

PR fortran/19314
        * io/inquire.c(inquire_via_unit): implement POSITION=.
        * io/transfer.c(next_record): update position for
        INQUIRE.
        * io/rewind.c(st_rewind): update position for
        INQUIRE.

        * gfortran.dg/inquire_5.f90: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@94060 138bc75d-0d04-0410-961f-82ee72b054a4